# server/docs/swagger.yaml
@@ -12,7 +12,75 @@ produces:
 tags:
 - name: "task"
   description: "operations on tasks"
-paths: 
+paths:
+  /tasks:
+    get:
+      tags:
+      - "task"
+      summary: "Get a list of tasks"
+      description: ""
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: 'array'
+            items: 
+              $ref: '#/definitions/task'
+    post:
+      tags:
+      - "task"
+      summary: "Add a new task"
+      description: ""
+      parameters:
+      - in: "body"
+        name: "task"
+        description: "task object that needs to be added in DB"
+        required: true
+        schema:
+          allOf:
+           - $ref: "#/definitions/taskEditableAttributes"
+           - type: 'object'
+             required:
+              - "name"
+      responses:
+        "201":
+          description: "Created"
+          schema:
+            $ref: "#/definitions/task"
+        "422":
+          $ref: '#/responses/unprocessableEntity'
+        "409":
+          $ref: '#/responses/conflict'
+  /tasks/{taskId}:
+    put:
+      tags:
+      - "task"
+      summary: "Update an existing task"
+      description: ""
+      parameters:
+      - name: "taskId"
+        in: "path"
+        description: "ID of task to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      - in: "body"
+        name: "task"
+        description: "task object that needs to be updated"
+        required: true
+        schema:
+          $ref: "#/definitions/taskEditableAttributes"
+      responses:
+        "200":
+          description: "Updated"
+          schema:
+            $ref: "#/definitions/task"       
+        "404":
+          $ref: '#/responses/notFound'
+        "409":
+          $ref: '#/responses/conflict'
+        "422":
+          $ref: '#/responses/unprocessableEntity'
 responses:
   notFound:
     description: Not found
@@ -20,6 +88,10 @@ responses:
       $ref: '#/definitions/genericError'
   unprocessableEntity:
     description: The provided data is not valid
+    schema:
+      $ref: '#/definitions/genericError'
+  conflict:
+    description: Some information is not allowed to be duplicated
     schema:
       $ref: '#/definitions/genericError'
 
@@ -30,4 +102,25 @@ definitions:
       errorMessage: 
         type: "string"
       errorDetails: 
-        type: "object"
+        type: "array"
+        items: 
+          type: 'object'
+
+  taskEditableAttributes:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+        example: "do something"
+      done: 
+        type: "boolean"
+
+  task:
+    allOf: 
+      - type: "object"
+        properties:
+          id:
+            type: "integer"
+            format: "int64"
+      - $ref: '#/definitions/taskEditableAttributes'
+      
