# server/routes/task.routes.js
@@ -4,7 +4,7 @@ const router = require('express').Router();
 router.post('/', tasksController.create);
 router.get('/', tasksController.findAll);
 router.get('/:id', tasksController.findOne);
-router.put('/:id', tasksController.update);
+router.patch('/:id', tasksController.update);
 router.delete('/:id', tasksController.delete);
 
 module.exports = router;
